<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/login_bg">

            <ImageView
                android:layout_width="122dp"
                android:layout_height="122dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!--INPUT EMAIL-->
            <EditText
                android:id="@+id/username_input_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_icon_register"
                android:background="@android:color/transparent"
                android:fontFamily="@font/kanit_regular"
                android:hint="@string/email_string"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <!--ICON EMAIL-->
            <ImageView
                android:id="@+id/username_icon_register"
                android:layout_width="23dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/ic_email" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!--INPUT NAME-->
            <EditText
                android:id="@+id/name_input_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/name_icon_register"
                android:background="@android:color/transparent"
                android:fontFamily="@font/kanit_regular"
                android:hint="@string/name_string"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <!--ICON NAME-->
            <ImageView
                android:id="@+id/name_icon_register"
                android:layout_width="23dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/ic_baseline_supervised_user_circle_24" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!--INPUT SURNAME-->
            <EditText
                android:id="@+id/surname_input_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/surname_icon_register"
                android:background="@android:color/transparent"
                android:fontFamily="@font/kanit_regular"
                android:hint="@string/surname_string"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <!--ICON NAME-->
            <ImageView
                android:id="@+id/surname_icon_register"
                android:layout_width="23dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/ic_baseline_supervised_user_circle_24" />

        </RelativeLayout>
        <!--PASSWORD INPUT-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!--INPUT PASSWORD-->
            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_icon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/kanit_regular"
                android:hint="@string/password_string"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <!--ICON PASSWORD-->
            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="23dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/ic_pass" />

        </RelativeLayout>

        <!--REPEAT PASSWORD-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">

            <!--INPUT REPEAT PASSWORD-->

            <EditText
                android:id="@+id/password_repeat_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/password_icon_register"
                android:background="@android:color/transparent"
                android:fontFamily="@font/kanit_regular"
                android:hint="@string/repeat_password_string"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp" />

            <!--ICON REPEAT PASSWORD-->
            <ImageView
                android:id="@+id/password_icon_register"
                android:layout_width="23dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/ic_pass" />


        </RelativeLayout>


        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:fontFamily="@font/kanit_semibold"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/signup_button"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/kanit_regular"
            android:onClick="goToLogin"
            android:text="Already have an account? Log In"
            android:textColor="#1566e0"
            android:textSize="13sp"
            android:layout_marginBottom="35dp"/>

    </LinearLayout>
</ScrollView>
</RelativeLayout>